--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,19 @@
 #app main {
   margin-left: 30px;
 }
+
+@media (max-width: 1000px) {
+  #app {
+    flex-direction: column;
+  }
+
+  #app main {
+    margin-left: 0;
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  #app aside {
+    width: 100%;
+  }
+}
