--- a/src/Main.css
+++ b/src/Main.css
@@ -6,6 +6,14 @@ main ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+  list-style: none;
+}
+
+@media (max-width: 650px) {
+  main ul {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
 }
 
 li.dev-item {
@@ -13,7 +21,6 @@ li.dev-item {
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
   border-radius: 2px;
   padding: 20px;
-  list-style: none;
 }
 
 li.dev-item header {
